apps/hardware/blinkstick/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blinkstick
  labels:
    octolet/layer: hardware
    octolet/component: blinkstick
    project: octolet
