apps/hardware/blinkstick/service-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: blinkstick-controller
  namespace: blinkstick
  labels:
    app: blinkstick-controller
  annotations:
    resource.twingate.com: "true"
    resource.twingate.com/name: "Hardware · BlinkStick"
    resource.twingate.com/alias: "blinkstick.octolet.int"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: blinkstick-controller
